# fastapi-gcp-tasks

./: .gitignore  Dockerfile.emulator  LICENSE  Makefile  README.md  docker-compose.yaml  docker-compose.yml  local-requirements.txt  mkdocs.yml  pyproject.toml  renovate.json  requirements.txt  start-emulator.sh
.github/workflows/: ci.yml  docs.yml  lint.yaml  pypi-publish.yaml  test.yml
docs/: contributing.md  getting-started.md  index.md  tests.md
docs/api/: delayers-and-schedulers.md  dependencies.md  exceptions.md  hooks.md  protocols.md  route-builders.md  utils.md
docs/guide/: async.md  configuration.md  delayed-tasks.md  deployment.md  hooks-and-dependencies.md  scheduled-tasks.md  type-safety.md
examples/full/: main.py  serializer.py  settings.py  tasks.py
examples/simple/: main.py
fastapi_cloud_tasks/: decorators.py  delayed_route.py  delayer.py  exception.py  requester.py  scheduled_route.py  scheduler.py  utils.py
fastapi_gcp_tasks/: __init__.py  _callback_url.py  _endpoint_binding.py  async_clients.py  async_delayed_route.py  async_delayer.py  async_scheduled_route.py  async_scheduler.py  decorators.py  delayed_route.py  delayer.py  dependencies.py  exception.py  hooks.py  protocols.py  requester.py  scheduled_route.py  scheduler.py  utils.py
scripts/: format.sh  lint.sh
tests/: conftest.py  test_async_delayer.py  test_async_scheduler.py  test_callback_url.py  test_delayed_route.py  test_duplicate_endpoints.py  test_examples.py  test_requester.py  test_router_prefixes.py  test_scheduled_route.py  test_smoke.py  test_typed_api.py
